DigicielFull/force-app/main/default/objects/amc__Agenda_Task__c/amc__Agenda_Task__c.object-meta.xml
<CustomObject>
    <description>The Agenda Task Object is used to identify the tasks assigned to Attendees within a Meeting.</description>
    <label>Agenda Task</label>
    <nameField>
        <label>Agenda Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agenda Task</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>