DigicielFull/force-app/main/default/objects/amc__Agenda_Task__c/fields/amc__Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Agenda Task</relationshipLabel>
    <relationshipName>Agenda_Task</relationshipName>
    <type>Lookup</type>
</CustomField>