DigicielFull/force-app/main/default/objects/amc__Agenda_Task__c/fields/amc__Added_to_Next_Meeting__c.field-meta.xml
<CustomField>
    <fullName>amc__Added_to_Next_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies that this Agenda Task has been added to the Next Meeting</inlineHelpText>
    <label>Added to Next Meeting</label>
    <type>Checkbox</type>
</CustomField>