DigicielFull/force-app/main/default/objects/amc__Agenda_Task__c/fields/amc__Task_Comments__c.field-meta.xml
<CustomField>
    <fullName>amc__Task_Comments__c</fullName>
    <inlineHelpText>Identifies the details of the Agenda Task</inlineHelpText>
    <label>Task Comments</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>