DigicielFull/force-app/main/default/objects/amc__Agenda_Task__c/fields/amc__Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>amc__Task_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Role record of the person assigned to this Agenda Task</inlineHelpText>
    <label>Task Owner</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Agenda Task</relationshipLabel>
    <relationshipName>Agenda_Task</relationshipName>
    <type>Lookup</type>
</CustomField>